# token-smithers

./: .gitignore  CLAUDE.md  README.md  RESEARCH.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
.vbw-planning/: .agent-pids  .context-usage  .cost-ledger.json  .notification-log.jsonl  .session-log.jsonl  PROJECT.md  REQUIREMENTS.md  RESEARCH-gitnexus-vs-jmunch.md  ROADMAP.md  STATE.md  discovery.json
.vbw-planning/.cache/: context-index.json
.vbw-planning/.cache/context/: b238295569221cae.md  dda90dac27516233.md
.vbw-planning/.events/: event-log.jsonl
.vbw-planning/.metrics/: run-metrics.jsonl
.vbw-planning/phases/01-domain-core/: .context-dev.md  01-01-PLAN.md  01-01-RESEARCH.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-UAT.md  01-VERIFICATION.md
.vbw-planning/phases/06-multi-language-ast/: 06-01-SUMMARY.md  06-02-SUMMARY.md  06-03-SUMMARY.md  06-VERIFICATION.md
.vbw-planning/phases/10-session-intelligence/: 10-01-PLAN.md  10-02-PLAN.md  10-03-PLAN.md  10-04-PLAN.md  10-05-PLAN.md  10-06-PLAN.md  10-07-PLAN.md  10-08-PLAN.md  10-09-PLAN.md  10-10-PLAN.md  10-11-PLAN.md  10-12-PLAN.md  10-13-PLAN.md  10-CONTEXT.md  10-RESEARCH.md
scripts/: benchmark_all.py
src/token_sieve/: __init__.py  __main__.py
src/token_sieve/adapters/: __init__.py
src/token_sieve/cli/: __init__.py  _session.py  bypass.py  compress.py  cost_utils.py  estimate.py  main.py  recall.py  report_formatter.py  setup.py  stats_shadow.py
src/token_sieve/config/: __init__.py  schema.py  validator.py
src/token_sieve/domain/: __init__.py  attention_score.py  constants.py  counters.py  learning_types.py  metrics.py  model.py  pipeline.py  ports.py  ports_attention.py  ports_cache.py  ports_embed.py  ports_learning.py  ports_mcp.py  ports_rerank.py  ports_schema.py  ports_visibility.py  session.py  tool_metadata.py
src/token_sieve/hooks/: _common.sh  agent-mcp-gate.sh  agent-session-init.sh  bash-compress-rewrite.sh  bash-edge-redirect.sh  csv-redirect.sh  edit-mcp-gate.sh  glob-redirect.sh  grep-redirect.sh  image-redirect.sh  large-file-redirect.sh  mcp-read-tracker.sh  notebook-redirect.sh  webfetch-redirect.sh
src/token_sieve/server/: __init__.py  metrics_sink.py  metrics_writer.py  (+2 more)
tests/: conftest.py
tests/benchmark/: __init__.py  corpus.py  test_compression_benchmark.py
tests/helpers/: __init__.py  fake_mcp_server.py  test_fake_mcp_server.py
tests/integration/: __init__.py  test_mcp_roundtrip.py  test_phase07_integration.py  test_proxy_phase04.py
tests/unit/: test_ast_extra_smoke.py  test_canary_determinism.py  test_ci_yaml_valid.py
(+197 files in other folders)
