[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "token-sieve"
version = "0.1.0"
description = "MCP compression gateway that reduces token usage"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
token-sieve = "token_sieve.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/token_sieve"]

[tool.pytest.ini_options]
addopts = "--cov=token_sieve.domain --cov-fail-under=100 --cov-branch"
testpaths = ["tests"]

[tool.coverage.run]
source = ["token_sieve.domain"]

[tool.coverage.report]
show_missing = true
