[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "token-sieve"
version = "0.1.0"
description = "MCP compression gateway that reduces token usage"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
token-sieve = "token_sieve.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/token_sieve"]

[tool.pytest.ini_options]
addopts = "--cov=token_sieve.domain --cov=token_sieve.adapters --cov=token_sieve.server --cov=token_sieve.cli --cov-fail-under=60 --cov-branch"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: full MCP round-trip integration tests",
]

[tool.coverage.run]
source = ["token_sieve.domain", "token_sieve.adapters", "token_sieve.server", "token_sieve.cli"]

[tool.coverage.report]
show_missing = true
